<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/msg_sit_back"
                android:textColor="@color/gen_black"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/msg_manual_otp"
                android:textColor="@color/gen_black"
                android:textSize="@dimen/text_size_14" />

            <EditText
                android:id="@+id/otp_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/stay_color"
                android:gravity="center"
                android:hint="@string/enter_your_otp"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">

                <com.chaos.view.PinView
                    android:id="@+id/pinView"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:hint="Hint."
                    android:inputType="number"
                    android:padding="8dp"
                    android:textColor="@color/gen_black"
                    android:textSize="@dimen/text_size_16"
                    app:itemCount="6"
                    app:itemHeight="48dp"
                    app:itemRadius="4dp"
                    app:itemSpacing="8dp"
                    app:itemWidth="36dp"
                    app:lineColor="@color/grey"
                    app:lineWidth="1dp"
                    app:viewType="rectangle" />

                <TextView
                    android:id="@+id/timer_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/pinView"
                    android:layout_below="@id/pinView"
                    android:padding="8dp"
                    tools:text="@string/timer"
                    android:textColor="@color/stay_color" />
            </RelativeLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button_color_primary"
                android:tag="custom_login_button"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20" />

            <TextView
                android:id="@+id/resend_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/otp_not_received_n_resend_otp"
                android:textColor="@color/gen_black"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#FFFFFF" />
    <include
        android:id="@+id/loader_layout"
        layout="@layout/loader_layout"
        android:visibility="gone" />
</RelativeLayout>


